--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
   font-family: 'Montserrat', sans-serif;
 
   /* full page background from css tricks */
-  background: url(header.jpg) no-repeat center center fixed; 
+  background: url(https://github.com/johntravolta1/site-topen/blob/master/header.jpg?raw=true) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
